# Copyright 2026 Two Sigma Open Source, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frost"
version = "0.1.0"
description = "FROST: FPGA RISC-V Open-sourced in SystemVerilog by TwoSigma"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cocotb==2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["verif*", "tests*"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--tb=short",
]
testpaths = ["tests", "verif/cocotb_tests"]
pythonpath = ["."]
markers = [
    "cocotb: marks tests that use cocotb for HDL simulation",
    "synthesis: marks tests that run synthesis tools",
    "slow: marks tests as slow running",
]

[tool.mypy]
exclude = ["sw/FreeRTOS-Kernel", "sw/apps/coremark/coremark", "sw/apps/arch_test/riscv-arch-test"]
files = ["verif", "tests"]
mypy_path = ["verif", "sw/apps", "stubs", "tests"]
explicit_package_bases = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["cocotb.*"]
ignore_missing_imports = true

[tool.ruff]
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = ["sw/FreeRTOS-Kernel", "sw/apps/coremark/coremark"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "N", "UP", "D212"]
ignore = ["D203"]
pydocstyle.convention = "pep257"
